Fixing overflow on smaller viewport

--- a/public/stylesheets/delete.css
+++ b/public/stylesheets/delete.css
@@ -49,6 +49,12 @@
     background-color: #dc6068;
 }
 
+@media(max-width: 858px) {
+    .delete, .error {
+        margin-top: 10rem;
+    }
+}
+
 @media(max-width: 520px) {
     .delete__container {
         border-radius: 0;
