--- a/public/stylesheets/detail.css
+++ b/public/stylesheets/detail.css
@@ -23,14 +23,14 @@
   margin-bottom: 2rem;
 }
 
-.detail__detail{
+.detail__detail {
   font-weight: 600;
   font-size: 30px;
   margin-right: 6px;
   color: whitesmoke;
 }
 
-.detail__number{
+.detail__number {
   font-weight: 100;
   color: rgba(194, 194, 194);
   font-size: 26px;
@@ -137,6 +137,20 @@
   border-radius: 8px;
   background-color: #375af2;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 858px) {
+  .detail__container {
+    position: fixed;
+    margin-top: 7rem;
+    background-color: rgb(58, 58, 58);
+  }
+  .home{
+    margin-top: 14rem;
+  }
+  .detail {
+    margin-top: 12rem;
+  }
 }
 
 @media (max-width: 520px) {
